fixed spacing

--- a/_events.scss
+++ b/_events.scss
@@ -352,15 +352,16 @@
 .e-m-card {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0.5rem;
   border-radius: 1vw;
   // height: 40vh;
 }
 .e-m-card-1 {
   background-color: rgba(222, 48, 0, 0.822);
+  margin-bottom: 1vw;
 }
 .e-m-card-2 {
   background-color: rgba(204, 0, 114, 0.822);
+  margin-bottom: 1vw;
 }
 .e-m-card-3 {
   background-color: #3c68f8;
