--- a/_legends.scss
+++ b/_legends.scss
@@ -140,10 +140,13 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 1vw;
-  margin-bottom: 0.5rem;
   margin-left: auto;
   margin-right: auto;
   position: relative;
+}
+.l-box-1,
+.l-box-2 {
+  margin-bottom: 1vw;
 }
 .l-pic-box {
   height: 30vh;
